# ia-agents-on-eks

./: .gitignore  .terraform.lock.hcl  CLAUDE.md  Makefile  README.md  backend_override.tf  main.tf  outputs.tf  providers.tf  pyproject.toml  variables.tf  versions.tf
.github/workflows/: infrastructure-validation.yml  phase-4c0b1-contract-validation.yml  quality.yml
apps/backend-api/: pyproject.toml
apps/backend-api/src/ia_backend_api/: __init__.py  app.py  auth.py  container.py  document_deletion_worker.py  document_worker.py  errors.py  main.py  middleware.py  schemas.py  sessions.py  settings.py
docs/adr/: 0001-custom-agents-agentcore-runtime.md  0002-custom-rag-s3-vectors.md  0003-hexagonal-monorepo.md  0004-github-actions-bootstrap-ci.md  0005-cognito-access-token-trusted-context.md  0006-dynamodb-repository-layout.md  0007-application-owned-document-ingestion.md  0008-aws-document-adapter-layout.md  0009-document-source-upload-and-extraction-boundary.md  0010-asynchronous-document-ingestion.md  0011-asynchronous-document-deletion.md  0011-document-infrastructure-and-deployment.md  0012-terraform-industrialization-model.md
docs/architecture/: phase-1-baseline-review.md  phase-2-identity-api.md  phase-3-aws-document-adapters.md  phase-3-document-api.md  phase-3-document-ingestion.md  phase-4-document-infrastructure-plan.md  phase-4b-document-data-plane.md  phase-4c-document-workload-identity.md  phase-4c0-terraform-industrialization-plan.md  phase-4c0b1-encryption-storage.md
home/.bashrc.d/: eks.bash  env.bash
home/scripts/: create-managed-node-group.sh  deploy-eks-app.sh  get-app-urls.sh  setup-devops-agent.sh  show-labs.sh
modules/: .gitkeep
modules/amg-keycloak-idp/: configurator.tf  keycloak.tf  main.tf  outputs.tf  variables.tf  versions.tf
modules/crm/: main.tf  outputs.tf  variables.tf
modules/dependencies/: catalog_rds.tf  dynamodb.tf  elasticache.tf  main.tf  mq.tf  orders_rds.tf  outputs.tf  sqs.tf  variables.tf  versions.tf
modules/ecs/: alb.tf  autoscaling.tf  carts.tf  catalog.tf  checkout.tf  cluster.tf  common.tf  eventbridge.tf  main.tf  observability.tf  orders.tf  outputs.tf  ui.tf  variables.tf
modules/eks/: addons.tf  main.tf  observability.tf  outputs.tf  variables.tf  versions.tf
modules/eks-dependencies/: catalog_rds.tf  dynamodb.tf  elasticache.tf  main.tf  mq.tf  orders_rds.tf  outputs.tf  sqs.tf  variables.tf  versions.tf
modules/security-groups/: main.tf  outputs.tf  variables.tf  versions.tf
modules/vpc/: main.tf  outputs.tf  variables.tf  versions.tf
tests/contract/: test_ingestion_job_repository_contract.py  test_ingestion_lease_repository_contract.py  test_repository_tenant_isolation.py  test_vector_generation_filter_contract.py  test_vector_repository_contract.py
tests/integration/: test_api.py  test_document_api.py
tests/unit/: phase3_ingestion_support.py  test_agent_contracts.py  test_async_document_deletion.py  test_backend_factory.py  (+37 more)
(+131 files in other folders)
