[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
[project]
name = "ia-backend-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.128.2",
  "ia-application",
  "ia-aws-clients",
  "ia-domain",
  "ia-security",
  "pydantic-settings==2.14.1",
  "uvicorn[standard]==0.48.0",
]
[tool.uv.sources]
ia-application = { workspace = true }
ia-aws-clients = { workspace = true }
ia-domain = { workspace = true }
ia-security = { workspace = true }
[tool.hatch.build.targets.wheel]
packages = ["src/ia_backend_api"]
